Dark mode fix?

--- a/style.css
+++ b/style.css
@@ -46,21 +46,42 @@ content-wrapper {
     padding: 0 10vw;
 }
 
-/* THEME */
+/* OLD THEME */
 
-:root {
-    --primary-background-color: pink;
-    --secondary-background-color: aliceblue;
-    --primary-text-color: orchid;
-    --hover-text-color: palevioletred;
-    --shadow-color-light: rgba(218, 112, 214, 0.5);
-    --shadow-color-dark: rgba(218, 112, 214, .75);
+@media (prefers-color-scheme: light) {
+    :root {
+        --primary-background-color: pink;
+        --secondary-background-color: aliceblue;
+        --primary-text-color: orchid;
+        --hover-text-color: palevioletred;
+        --shadow-color-light: rgba(218, 112, 214, 0.5);
+        --shadow-color-dark: rgba(218, 112, 214, .75);
 
-    --border-radius-xsmall: 5px;
-    --border-radius-small: 15px;
-    --border-radius-medium: 25px;
-    --border-radius-large: 50px;
-    --border-radius-xlarge: 100px;
+        --border-radius-xsmall: 5px;
+        --border-radius-small: 15px;
+        --border-radius-medium: 25px;
+        --border-radius-large: 50px;
+        --border-radius-xlarge: 100px;
+    }
+}
+
+
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --primary-background-color: pink;
+        --secondary-background-color: aliceblue;
+        --primary-text-color: orchid;
+        --hover-text-color: palevioletred;
+        --shadow-color-light: rgba(218, 112, 214, 0.5);
+        --shadow-color-dark: rgba(218, 112, 214, .75);
+
+        --border-radius-xsmall: 5px;
+        --border-radius-small: 15px;
+        --border-radius-medium: 25px;
+        --border-radius-large: 50px;
+        --border-radius-xlarge: 100px;
+    }
 }
 
 /* STYLE */
